--- a/Organizer.css
+++ b/Organizer.css
@@ -477,13 +477,13 @@
     width: 340px;
   }
 }.u-section-10 .u-sheet-1 {
-  min-height: 235px;
+  min-height: 237px;
 }
 
 .u-section-10 .u-image-1 {
   width: 150px;
   height: 150px;
-  margin: 7px auto 0 99px;
+  margin: 24px auto 0 100px;
 }
 
 .u-section-10 .u-text-1 {
@@ -493,7 +493,14 @@
 
 .u-section-10 .u-text-2 {
   font-size: 1.375rem;
-  margin: 42px 909px 43px 117px;
+  margin: 42px 909px 0 117px;
+}
+
+.u-section-10 .u-line-1 {
+  transform-origin: right center 0px;
+  border-style: dotted;
+  width: 755px;
+  margin: 26px 0 0 auto;
 }
 
 @media (max-width: 1199px) {
@@ -518,6 +525,10 @@
     margin-right: 606px;
     margin-left: 0;
   }
+
+  .u-section-10 .u-line-1 {
+    width: 720px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -530,6 +541,10 @@
     font-size: 1rem;
     margin-right: 426px;
   }
+
+  .u-section-10 .u-line-1 {
+    width: 540px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -541,29 +556,60 @@
   .u-section-10 .u-text-2 {
     margin-right: 226px;
   }
+
+  .u-section-10 .u-line-1 {
+    width: 340px;
+  }
 }.u-section-11 .u-sheet-1 {
-  min-height: 83px;
+  min-height: 118px;
 }
 
 .u-section-11 .u-text-1 {
+  font-size: 1.25rem;
+  margin: 43px -1px 43px 386px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-11 .u-text-1 {
+    margin-left: 286px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-11 .u-text-1 {
+    margin-left: 176px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-11 .u-text-1 {
+    font-size: 1rem;
+    margin-right: 0;
+    margin-left: 0;
+  }
+}.u-section-12 .u-sheet-1 {
+  min-height: 83px;
+}
+
+.u-section-12 .u-text-1 {
   font-weight: 700;
   margin: 20px auto 20px 0;
-}.u-section-12 .u-sheet-1 {
+}.u-section-13 .u-sheet-1 {
   min-height: 150px;
 }
 
-.u-section-12 .u-image-1 {
+.u-section-13 .u-image-1 {
   width: 352px;
   height: 104px;
   margin: 23px auto 0 12px;
 }
 
-.u-section-12 .u-text-1 {
+.u-section-13 .u-text-1 {
   font-size: 0.875rem;
   margin: -85px 0 0 385px;
 }
 
-.u-section-12 .u-line-1 {
+.u-section-13 .u-line-1 {
   transform-origin: right center 0px;
   border-style: dotted;
   width: 755px;
@@ -571,74 +617,74 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-12 .u-text-1 {
+  .u-section-13 .u-text-1 {
     margin-left: 185px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-12 .u-text-1 {
+  .u-section-13 .u-text-1 {
     margin-left: 0;
   }
 
-  .u-section-12 .u-line-1 {
+  .u-section-13 .u-line-1 {
     width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-12 .u-line-1 {
+  .u-section-13 .u-line-1 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-12 .u-sheet-1 {
+  .u-section-13 .u-sheet-1 {
     min-height: 146px;
   }
 
-  .u-section-12 .u-image-1 {
+  .u-section-13 .u-image-1 {
     width: 340px;
     height: 100px;
     margin-left: 0;
   }
 
-  .u-section-12 .u-text-1 {
+  .u-section-13 .u-text-1 {
     margin-top: -81px;
   }
 
-  .u-section-12 .u-line-1 {
+  .u-section-13 .u-line-1 {
     width: 340px;
   }
-}.u-section-13 .u-sheet-1 {
+}.u-section-14 .u-sheet-1 {
   min-height: 216px;
 }
 
-.u-section-13 .u-image-1 {
+.u-section-14 .u-image-1 {
   width: 168px;
   height: 168px;
   margin: 24px auto 0 92px;
 }
 
-.u-section-13 .u-text-1 {
+.u-section-14 .u-text-1 {
   font-size: 0.875rem;
   margin: -113px 0 71px 385px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-13 .u-text-1 {
+  .u-section-14 .u-text-1 {
     margin-left: 185px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-13 .u-text-1 {
+  .u-section-14 .u-text-1 {
     margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-13 .u-text-1 {
+  .u-section-14 .u-text-1 {
     margin-bottom: 60px;
   }
 }
